# gpt-newspaper

./: .gitignore  README.md  pyproject.toml
backend/: langgraph_agent.py
backend/agents/: critique.py  curator.py  search.py  writer.py
mcp_server/: README.md  client.py  server.py
